# inz

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.md.bak  analyze_experiments.py  clang-format  main.py
devlog/: test.md
include/: AABB.hpp  AnalysisData.hpp  AppData.hpp  Camera.h  Camera.hpp  Cloth.h  Cloth.hpp  ExperimentSystem.hpp  Force.hpp  GUI.hpp  Object.hpp  Ray.hpp  Shader.h  Shader.hpp  Skybox.hpp  Texture.hpp
shaders/: shader.fs  shader.vs
src/: AABB.cpp  AnalysisData.cpp  Camera.cpp  Cloth.cpp  ExperimentSystem.cpp  Force.cpp  GUI.cpp  Object.cpp  Ray.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  main.cpp
